# CCxD

./: .gitignore  README.md
Analysis_SS/: 2DTRRG.nb  2DTRRG_edit.nb  ExponentAnalysis_SS-BS.nb  FPComparison.nb  FPConvergeComparison.nb  GDERRORINVESTIGATION.nb  GDdatapoints.nb
CC2D/scripts/: Cain-Dists.sh  Cain-RG.sh  RG.sh  Son-Dists.sh  Son-RG.sh  master.sh  pushmaster.sh
CCGD/scripts/: changes.txt  master.sh  master_GD_WORKING.sh  master_edit.sh  master_edit_nodisorder.sh  pushmaster.sh  pushmaster_GD_WORKING.sh  pushmaster_edit.sh  pushmaster_edit_nodisorder.sh  test.sh
CCTRI/: .pre-commit-config.yaml  2DPlotScript.sh  CMakeLists.txt  RGStep.h  TRIRG  TRIRG.cpp  TRIRGConfig.h.in  analyse.py  analyseSingleAngle.py  generalFunctions.cpp  histogramOperations.h  phaseMapMaxHeight.py  phasemap.py  quickrun.py  randNumGen.h  randNums.cpp  runScript.sh  singleRunParallelScript.sh
CCTRI/CCTRI/: CC2D.cpp  RGStep.hpp  TRIRG.cpp  TRIRGConfig.hpp  generalFunctions.cpp  randNumGen.hpp
CCTRI/analysis/: CC2DAnalyse.py  analyse.py  analyseSingleAngle.py  analyseSingleAnglev2.py  criticalexponent.py  noAngleAnalse.py  noAngleAnalyse.py  phaseMapMaxHeight.py
CCTRI/tests/: randomNumbersTest.cc
cctri_build/: outputg2.txt  outputg3.txt  outputg4.txt  outputg5.txt  outputt2.txt  outputt3.txt  outputt4.txt  outputt5.txt  outputth2.txt  outputth3.txt  outputth4.txt  outputth5.txt  outputz2.txt  outputz3.txt  outputz4.txt  outputz5.txt
